<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191926"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/orig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mask"
            android:contentDescription="@string/mask"
            app:layout_constraintBottom_toBottomOf="@id/orig"
            app:layout_constraintEnd_toEndOf="@id/orig"
            app:layout_constraintStart_toStartOf="@id/orig"
            app:layout_constraintTop_toTopOf="@id/orig" />

        <TextView
            android:id="@+id/topMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:alpha="0.5"
            android:gravity="start|center_vertical"
            android:paddingStart="18dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/lessthan" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_font"
            app:layout_constraintBottom_toBottomOf="@id/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.9"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/age_category"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintCircleRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/genre"
            android:textColor="@color/pink"
            android:textSize="@dimen/bigger_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:foregroundGravity="center_vertical"
            android:progressBackgroundTint="@color/grey"
            android:progressTint="@color/pink"
            android:rating="4"
            android:secondaryProgressTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical|start"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/reviews"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/tag" />

        <TextView
            android:id="@+id/storyLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="start|center_vertical"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:alpha="0.75"
            android:gravity="start|center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyLine" />

        <TextView
            android:id="@+id/textViewCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="116dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

        <ImageView
            android:id="@+id/movie1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/actor"
            android:src="@drawable/movie1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/movie2"
            app:layout_constraintStart_toStartOf="@id/textViewCast"
            app:layout_constraintTop_toBottomOf="@id/textViewCast" />

        <ImageView
            android:id="@+id/movie2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/actor"
            android:src="@drawable/movie2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/movie3"
            app:layout_constraintStart_toEndOf="@+id/movie1"
            app:layout_constraintTop_toBottomOf="@id/textViewCast" />

        <ImageView
            android:id="@+id/movie3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/actor"
            android:src="@drawable/movie3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/movie4"
            app:layout_constraintStart_toEndOf="@+id/movie2"
            app:layout_constraintTop_toBottomOf="@id/textViewCast" />

        <ImageView
            android:id="@+id/movie4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/actor"
            android:src="@drawable/movie4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/storyLine"
            app:layout_constraintStart_toEndOf="@+id/movie3"
            app:layout_constraintTop_toBottomOf="@id/textViewCast" />

        <TextView
            android:id="@+id/textViewMovie1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintEnd_toEndOf="@id/movie1"
            app:layout_constraintStart_toStartOf="@id/movie1"
            app:layout_constraintTop_toBottomOf="@id/movie1" />

        <TextView
            android:id="@+id/textViewMovie2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_evans"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintEnd_toEndOf="@id/movie2"

            app:layout_constraintStart_toStartOf="@id/movie2"
            app:layout_constraintTop_toBottomOf="@id/movie2" />

        <TextView
            android:id="@+id/textViewMovie3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintEnd_toEndOf="@id/movie3"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toStartOf="@id/movie3"
            app:layout_constraintTop_toBottomOf="@id/movie3" />

        <TextView
            android:id="@+id/textViewMovie4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/white"
            android:textSize="@dimen/base_font"
            app:layout_constraintEnd_toEndOf="@id/movie4"
            app:layout_constraintStart_toEndOf="@+id/textViewMovie3"
            app:layout_constraintStart_toStartOf="@id/movie4"
            app:layout_constraintTop_toBottomOf="@id/movie4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
